# Ohm2018

./: README.md
data/targets/: basic_north_run.txt  basic_south_run.txt  gps_test.txt  gps_test_2.txt  practice_forward.txt  practice_reverse.txt  qualification.txt
drive_mode_control/: CMakeLists.txt  package.xml
drive_mode_control/src/: ohm_drive_mode_control.cpp
heading_control/: CMakeLists.txt  package.xml
heading_control/include/: pid.h
heading_control/launch/: aria.launch  camera_test.launch  gps_test.launch  heading.launch  lidar_camera.launch  lidar_test.launch  pid_test.launch
heading_control/src/: heading_control.cpp
helper_nodes/: CMakeLists.txt  package.xml
helper_nodes/include/helper_nodes/: util.h
helper_nodes/launch/: odometry.launch  waypoint.launch
helper_nodes/src/: odometry.cpp  odometry_readout.cpp  scan_xy_node.cpp  test_broadcaster.cpp  test_listener.cpp  waypoint_selection.cpp
launch/: joystick.launch
object_detection/: CMakeLists.txt  package.xml
object_detection/include/: object_detection.h  util.h
object_detection/include/object_detection/: object_detection.h
object_detection/launch/: obstacle_recognizer.launch  obstacle_recognizer_debug.launch  obstacle_recognizer_peripherals.launch
object_detection/src/: node.cpp  object_detection.cpp
ohm_igvc_msgs/: CMakeLists.txt  package.xml
ohm_igvc_msgs/msg/: Range.msg  RangeArray.msg  TurnAngles.msg
ohm_igvc_srvs/: CMakeLists.txt  package.xml
ohm_igvc_srvs/srv/: coordinate_convert.srv  real_convert.srv  waypoint.srv
vn300/: CMakeLists.txt  README.md  package.xml
vn300/launch/: vn300.launch
vn300/src/: gps_node.cpp
waypoint_selection/: CMakeLists.txt  package.xml
waypoint_selection/src/: waypoint_selection.cpp
white_line_detection/: CMakeLists.txt  package.xml
white_line_detection/src/: white_line_detection.cpp
whiteline_detection/: CMakeLists.txt
whiteline_detection/src/: white_line_detection.cpp
